# gpt2web

./: Dockerfile  README.md  pyproject.toml  setup.cfg
gpt2web/api/: app.py  gen.py
gpt2web/cli/: __init__.py  config.py
gpt2web/cli/commands/: start.py
gpt2web/generation/: generator.py  sample.py
gpt2web/models/: manager.py  model.py
